feat(manager): 更新菜单生成策略